<resources>
    <string name="app_name">SoyLucas</string>
    <string name="app_version_name">5.0</string>

    <string name="Login_user">Usuario</string>
    <string name="Login_password">Contraseña</string>
    <string name="Login_button">Inicia tu sesión</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="prestamo">Préstamo</string>
    <string name="interes">Tasa de Interés</string>
    <string name="adevolver">A devolver</string>
    <string name="tea">TEA: </string>
    <string name="tcea">TCEA: </string>
    <string name="buttonprestamo">Solicitar Crédito</string>
    <!-- Actividad Persona-->
    <string name="registropersona">Registra tus datos personales</string>
    <string name="documento">Nro. Doc: </string>
    <string name="codigoverificador">Codigo Verificador: </string>
    <string name="nombres">Nombres: </string>
    <string name="primerapellido">Primer Apellido: </string>
    <string name="segundoapellido">Segundo Apellido: </string>
    <string name="celular">Celular: </string>
    <string name="correo">Correo: </string>
    <string name="confirmarcorreo">Confirmar Correo: </string>
    <string name="departamento">Departamento: </string>
    <string name="provincia">Provincia: </string>
    <string name="distrito">Distrito: </string>
    <string name="tipodireccion">Tipo dirección: </string>
    <string name="direccion">Dirección: </string>
    <string name="NrooMZ">Nro o MZ: </string>
    <string name="DptooLt">Dpto o Lt.: </string>
    <string name="tiporesidencia">Tipo de Residencia: </string>
    <string name="sexo">Sexo: </string>
    <string name="telfonofijo">Télefono fijo: </string>
    <string name="fechnacimiento">Fecha nac.: </string>
    <string name="cargopublico">Ejerce o ha ejercido algún cargo público: </string>
    <string name="estadocivil">Estado Civil: </string>
    <string name="datosdeempleo">Datos de empleo</string>
    <string name="lugardeempleo">Dirección de empleo</string>
    <string name="actividadeco">Actividad Eco.: </string>
    <string name="situacionlaboral">Situacion Lab: </string>
    <string name="profesion">Profesión: </string>
    <string name="tipoempleo">Tipo Empleo: </string>
    <string name="ruc">Ruc: </string>
    <string name="fechainglaboral">Fecha ing Laboral: </string>
    <string name="telefonoempleo">Teléfono Empleo: </string>
    <string name="ingdeclarado">Ingreso Declarado: </string>
    <string name="direccionempleo">Dirección de Empleo: </string>
    <string name="centrolaboral">Centro laboral/empleador: </string>
    <!-- Fin Actividad Persona-->
    <!-- Actividad Garantias -->
    <string name="valortasacion">%Valor tasado: </string>
    <string name="vtasacion">V. tasado: </string>
    <string name="prestamomaximo">Préstamo Máximo: </string>
    <string name="prestamominimo">Préstamo Minimo: </string>
    <string name="prestamogarantia">Préstamo: </string>
    <string name="items">items: </string>
    <string name="totalprestamo">Total préstamo: </string>
    <string name="descripcion">Descripción: </string>
    <!-- Fin Actividad Garantias-->

    <string name="action_delete">Eliminar</string>
    <string name="action_select_all">Seleccionar todo</string>
    <string name="texto_pin">Hemos enviado un mensaje con tu PIN de seguridad al teléfono que registro el afiliado. Cuando lo recibas, ingresa el PIN aquí.</string>

    <string name="title_activity_activity_login">Inicio Crédito</string>
    <string name="title_activity_activity_registro_persona">Registro de cliente</string>
    <string name="title_activity_activity_confiracion_cod">Confirmación Numero</string>
    <string name="title_activity_activity_lendo">Acceso a Solicitud</string>
    <string name="title_activity_activity_registro_documento">Registro de documentos</string>
    <string name="title_activity_activity_registro_estadodecuenta">Estado de cuenta</string>
    <string name="title_activity_activity_registro_garantias">Registro Garantias</string>
    <string name="title_activity_activity_simulador">Solicitud de crédito</string>
    <string name="title_activity_activity_bandeja">Búsqueda de Créditos</string>
    <string name="title_activity_activity_registro_correo">Acceso a Solicitud</string>
    <string name="title_activity_datos_contrato">Datos contrato</string>
    <string name="title_activity_datos_operacion">Datos de operación</string>
    <string name="title_activity_meta">Meta</string>
    <string name="title_activity_datos_persona">Registro de cliente</string>

    <string name="spSeleccione">---SELECCIONE---</string>

    <!-- Lenddo App partner id -->
    <string name="partner_script_id">PLACE_YOUR_PARTNER_SCRIPT_ID_HERE</string>
    <string name="google_client_id">PLACE GOOGLE WEB OAUTH2.0 CLIENT ID HERE</string>
    <string name="api_secret">SET_YOUR_API_SECRET_HERE</string>

    <string name="title_activity_consulta_credito">ActivityConsultaCredito</string>
    <string name="title_activity_login">ActivityLogin</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="mensaje_permisos_lenddo_data">Queremos darte cosas geniales y para eso necesitamos conocerte mejor. Por eso te pedimos permiso para ver tu info de teléfono, calendario, contactos, localización y SMS. Tus datos están súper seguros y obviamente no vamos a contactar a tus amigos ni a guardar sus datos.</string>
    <string name="mensaje_rechazo_solicitud">Lamento informarte que en este momento no cumples con los requisitos para aprobarte el préstamo, espero poder atenderte más adelante.
        Para cualquier duda o consulta por favor comunícate a Aló Lucas al 01 615-7030.  Así mismo, te recordamos que Lucas es parte de la familia Inversiones La Cruz. Ingresa a www.soylucas.pe
        para mayor información.
    </string>
    <string name="mensaje_caducidad">La sesión ha caducado, por favor, pulse sobre el siguiente bóton para volver acceder a la aplicación.</string>

    <string name="datos_contrato_aviso">Estás a sólo un paso de obtener tu préstamo</string>
    <string name="datos_contrato_mensaje">Revísa los documentos y luego haz clíck en solicitar código para recibir un sms en tu celular, luego ingresa el código de 4 dígitos y haz clíck en continuar</string>
    <string name="numero_soylucas">016157030</string>
    <string name="datos_contrato_condicion">He leido y estoy de acuerdo con las condiciones establecidas en todos los documentos informados por el presente Prestamo Aprobado.</string>


</resources>
